[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Enemies/Soldier_Shooter.gd" type="Script" id=1]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/run0.png" type="Texture" id=2]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/run1.png" type="Texture" id=3]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/run2.png" type="Texture" id=4]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/run3.png" type="Texture" id=5]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/run4.png" type="Texture" id=6]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/run5.png" type="Texture" id=7]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/runUp0.png" type="Texture" id=8]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/runUp1.png" type="Texture" id=9]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/runUp2.png" type="Texture" id=10]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/runUp3.png" type="Texture" id=11]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/runUp4.png" type="Texture" id=12]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/runUp5.png" type="Texture" id=13]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/idleUp.png" type="Texture" id=14]
[ext_resource path="res://Images/Enemies/enemies/Soldier_Shooter/idleRight.png" type="Texture" id=15]
[ext_resource path="res://Images/Enemies/Bosses/HP/under.png" type="Texture" id=16]
[ext_resource path="res://Images/Enemies/Bosses/HP/fill.png" type="Texture" id=17]
[ext_resource path="res://Sounds/Effects/Enemies/Death/sfx_deathscream_robot1.wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "run",
"speed": 7.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "shot_rightUp",
"speed": 7.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "shot_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "shot_right",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 20.0
height = 40.0

[sub_resource type="Animation" id=3]

resource_name = "death"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "hit"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Soldier_Shooter" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 2
collision_mask = 5
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}
RUN_OFFSET = Vector2( 0, 7 )
UP_OFFSET = Vector2( 0, 5 )
ORIGINAL_OFFSET = Vector2( 0, 0 )
SPEED = 150
MAXHP = 50
WAIT_TIME = 1.5

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "shot_right"
playing = true
offset = Vector2( 0, 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Collision" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 16 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Left" type="RayCast2D" parent="." index="2"]

enabled = true
exclude_parent = true
cast_to = Vector2( -736, 0 )
collision_mask = 1

[node name="LeftUp1" type="RayCast2D" parent="." index="3"]

enabled = true
exclude_parent = true
cast_to = Vector2( -400, -100 )
collision_mask = 1

[node name="LeftUp2" type="RayCast2D" parent="." index="4"]

enabled = true
exclude_parent = true
cast_to = Vector2( -200, -300 )
collision_mask = 1

[node name="Right" type="RayCast2D" parent="." index="5"]

enabled = true
exclude_parent = true
cast_to = Vector2( 736, 0 )
collision_mask = 1

[node name="RightUp1" type="RayCast2D" parent="." index="6"]

enabled = true
exclude_parent = true
cast_to = Vector2( 400, -100 )
collision_mask = 1

[node name="RightUp2" type="RayCast2D" parent="." index="7"]

enabled = true
exclude_parent = true
cast_to = Vector2( 200, -300 )
collision_mask = 1

[node name="Up" type="RayCast2D" parent="." index="8"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, -400 )
collision_mask = 1

[node name="Gun_Positions" type="Node" parent="." index="9"]

[node name="Up" type="Position2D" parent="Gun_Positions" index="0"]

position = Vector2( 0, -50 )
_sections_unfolded = [ "Transform" ]

[node name="UpRight" type="Position2D" parent="Gun_Positions" index="1"]

position = Vector2( 20, -30 )
_sections_unfolded = [ "Transform" ]

[node name="UpLeft" type="Position2D" parent="Gun_Positions" index="2"]

position = Vector2( -20, -30 )
_sections_unfolded = [ "Transform" ]

[node name="Right" type="Position2D" parent="Gun_Positions" index="3"]

position = Vector2( 30, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Left" type="Position2D" parent="Gun_Positions" index="4"]

position = Vector2( -30, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="HP" type="TextureProgress" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -40.0
margin_right = 928.0
rect_scale = Vector2( 0.1, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 20.0
exp_edit = false
rounded = false
texture_under = ExtResource( 16 )
texture_over = null
texture_progress = ExtResource( 17 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="anim" type="AnimationPlayer" parent="." index="12"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/death = SubResource( 3 )
anims/hit = SubResource( 4 )
blend_times = [  ]

[node name="Visibility" type="VisibilityNotifier2D" parent="." index="13"]

rect = Rect2( -2.5, -2.5, 5, 5 )

[node name="Sounds" type="Node" parent="." index="14"]

[node name="death" type="AudioStreamPlayer" parent="Sounds" index="0"]

stream = ExtResource( 18 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "SFX"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


